--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @layer base {
-    @font-face {
+   
+}
+
+ @font-face {
         font-family: 'nb';
         src: url(/fonts/NBInternationalProBoo.ttf ) format('woff2');
     }
@@ -7,11 +10,11 @@
         font-family: 'rej';
         src: url(/fonts/Rejouice-Headline.ttf) format('woff2');
     }
-}
 
 
 #header h1 span{
     display: inline-block;
+    font-family: rej;
 }
 
 /* @media screen and (max-width:600px) {
